fix: NcSelect inner text overflowing in EditFull

--- a/css/app-full.scss
+++ b/css/app-full.scss
@@ -79,6 +79,10 @@
 	}
 }
 
+.vs__selected-options {
+	max-width: calc(100% - var(--default-clickable-area) - var(--default-grid-baseline));
+}
+
 .property-repeat__summary__content {
 	max-width: 300px;
 }
